@startuml

title __ETSYCRAWLER's Class Diagram__\n

  namespace core {
    class core.DBDriver {
    }
  }
  

  namespace core {
    class core.DownloadURLImage {
    }
  }
  

  namespace core {
    class core.Email {
    }
  }
  

  namespace core {
    class core.EtsyUrlFormatter {
    }
  }
  

  namespace core {
    class core.FileInput {
    }
  }
  

  namespace core {
    class core.FileOutput {
    }
  }
  

  namespace core {
    class core.HTMLParser {
    }
  }
  

  namespace core {
    class core.Item {
    }
  }
  

  namespace core {
    class core.TagNode {
    }
  }
  

  namespace core {
    class core.User {
    }
  }
  

  namespace core {
    class core.WebpageReaderWithAgent {
    }
  }
  

  namespace gui {
    class gui.GUI {
    }
  }
  

  namespace manager {
    class manager.Admin {
    }
  }
  

  namespace manager {
    class manager.App {
    }
  }
  

  namespace manager {
    class manager.UserSession {
    }
  }
  

  core.HTMLParser o-- core.FileInput : reader
  core.HTMLParser o-- core.TagNode : root
  core.Item .up.|> java.lang.Comparable
  core.TagNode o-- core.TagNode : parentTag
  core.WebpageReaderWithAgent o-- core.FileOutput : fileWriter
  gui.GUI o-- manager.Admin : admin
  gui.GUI o-- manager.UserSession : currentSession
  gui.GUI o-- core.EtsyUrlFormatter : etsyUrlFormatter
  manager.UserSession o-- core.User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
